syntax = "proto3";

package v1;

import "google/protobuf/wrappers.proto";

message Location {
  google.protobuf.StringValue region = 1;
  google.protobuf.StringValue zone = 2;
  google.protobuf.StringValue campus = 3;
}

message MatchString {
  enum MatchStringType {
    // Equivalent match
    EXACT = 0;
    // Regular match
    REGEX = 1;
    // Not equals match
    NOT_EQUALS = 2;
    // Include match
    IN = 3;
    // Not include match
    NOT_IN = 4;
  }

  enum ValueType {
    TEXT = 0;
    PARAMETER = 1;
    VARIABLE = 2;
  }

  MatchStringType type = 1;
  google.protobuf.StringValue value = 2;
  ValueType value_type = 3;
}


message StringList {
  repeated string values = 1;
}
